fix(prod): enforce strict Stripe validation, restrict CORS, disable show-sql in prod and validate payment amount.